force-app/main/default/objects/Prospect_Scoring_Metadata__mdt/Prospect_Scoring_Metadata__mdt.object-meta.xml
<CustomObject>
    <description>DCP-37602 This metadata is used to score Lead and Contact Records based on Campaign Membership</description>
    <label>Prospect Scoring Metadata</label>
    <pluralLabel>Prospect Scoring Metadata</pluralLabel>
</CustomObject>