force-app/main/default/objects/Prospect_Scoring_Metadata__mdt/fields/AMEA__c.field-meta.xml
<CustomField>
    <fullName>AMEA__c</fullName>
    <label>AMEA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>