force-app/main/default/objects/Prospect_Scoring_Metadata__mdt/fields/Campaign_Channel__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Channel__c</fullName>
	<description>Campaign channel value</description>
    <label>Campaign Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
                <default>true</default>
                <label>Live</label>
            </value>
			<value>
                <fullName>Virtual Workshop</fullName>
            </value>
			<value>
                <fullName>Virtual Event</fullName>
            </value>
			<value>
                <fullName>Event Email</fullName>
            </value>
			<value>
                <fullName>PXN Alert</fullName>
            </value>
			<value>
                <fullName>Customer Notifications</fullName>
            </value>
			<value>
                <fullName>Tech Support Webinar Email</fullName>
            </value>
			<value>
                <fullName>Channel Partner Email</fullName>
            </value>
			<value>
                <fullName>Market Research/ Surveys Email</fullName>
            </value>
			<value>
                <fullName>Third Party</fullName>
            </value>
			<value>
                <fullName>Third Party Gated</fullName>
            </value>
            <value>
                <fullName>Pre Recorded</fullName>
            </value>
            <value>
                <fullName>Tech Support</fullName>
            </value>
            <value>
                <fullName>Booth</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>KOL</fullName>
            </value>
            <value>
                <fullName>Virtual Event (Illumina)</fullName>
            </value>
            <value>
                <fullName>Virtual Event (3rd party)</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Digital Booth Engagement</fullName>
            </value>
            <value>
                <fullName>Lab In A Box</fullName>
            </value>
            <value>
                <fullName>Quiz</fullName>
            </value>
            <value>
                <fullName>RFID</fullName>
            </value>
            <value>
                <fullName>Customer Application Acceleration (CAAP)</fullName>
            </value>
            <value>
                <fullName>Customer Support Lead Generation (CSLG)</fullName>
            </value>
            <value>
                <fullName>Field Service</fullName>
            </value>
            <value>
                <fullName>Field Workshop</fullName>
            </value>
            <value>
                <fullName>Symposium</fullName>
            </value>
            <value>
                <fullName>User Group Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>