force-app/main/default/objects/Prospect_Scoring_Metadata__mdt/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
	<description>Campaign type value</description>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Digital Booth Engagement</fullName>
            </value>
            <value>
                <fullName>Email Program</fullName>
            </value>
            <value>
                <fullName>Email Subscription</fullName>
            </value>
            <value>
                <fullName>Marketing Supported Event</fullName>
            </value>
            <value>
                <fullName>Online Advertising</fullName>
            </value>
            <value>
                <fullName>Sales Event</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
                <default>true</default>
                <label>Webinar</label>
            </value>
            <value>
                <fullName>Website Contact Request</fullName>
            </value>
            <value>
                <fullName>Website Gated Content</fullName>
            </value>
			<value>
                <fullName>Email</fullName>
            </value>
			<value>
                <fullName>Opt In Request</fullName>
            </value>
			<value>
                <fullName>Illumina Hosted Event</fullName>
            </value>
			<value>
                <fullName>Third Party Hosted Event</fullName>
            </value>
			<value>
                <fullName>Contact Request</fullName>
            </value>		
			<value>
                <fullName>Gated Content</fullName>
            </value>	
        </valueSetDefinition>
    </valueSet>
</CustomField>