force-app/main/default/objects/Prospect_Scoring_Metadata__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
	<description>Indicates if that record is active or not</description>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>