force-app/main/default/objects/Prospect_Scoring_Metadata__mdt/fields/Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Status__c</fullName>
	<description>Campaign Member Status</description>
    <label>Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
                <default>true</default>
                <label>Attended</label>
            </value>
            <value>
                <fullName>Attended On-Demand</fullName>
            </value>
            <value>
                <fullName>Visited Booth</fullName>
            </value>
            <value>
                <fullName>Attended-Contact Me</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
			<value>
                <fullName>Converted-Contact Me</fullName>
            </value>
            <value>
                <fullName>Clicked</fullName>
            </value>
            <value>
                <fullName>Opened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>