force-app/main/default/objects/Prospect_Scoring_Metadata__mdt/fields/Primary_Key_Value__c.field-meta.xml
<CustomField>
    <fullName>Primary_Key_Value__c</fullName>
    <description>This field is combination of Campaign Type, Campaign Channel and Status Value</description>
    <label>Primary Key Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>